# webrtc-svc-tester

./: .gitignore  .gitmodules  Cargo.toml  README.md  biome.json  package.json  pyproject.toml
client/: index.html  package.json  tsconfig.json  tsconfig.worker.json  vite.config.js  webpack.config.js
client/public/js/: e2e-worker.js
client/src/: client.ts  index.ts
client/src/dom/: index.ts
client/src/lib/: api.ts  consumer.ts  device.ts  e2e_manager.ts  layer.ts  producer.ts
client/src/shared/: types.ts
client/src/workers/: e2e.worker.ts
sfu/: Cargo.toml  main.py
sfu/src/: main.rs
