[package]
name = "sfu"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.13.0", default-features = false, features = [
  "macros",
  "ws",
] }
async-io = "2.6.0"
criterion = "0.8.2"
env_logger = "0.11.9"
mediasoup = { path = "../mediasoup/rust" }
portpicker = "0.1.1"
serde = "1.0.228"
serde_json = "1.0.149"
actix-web-actors = "4.3.1"
